recipe/meta.yaml: use the global conda-forge version pin for gdk-pixbuf

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
   run_exports:
     # Looks good but no new info after 2.43 so keeping it x.x for safety.
@@ -30,14 +30,14 @@ requirements:
     - glib
     - libxml2
     - cairo
-    - gdk-pixbuf 2.36.*
+    - gdk-pixbuf
     - libcroco 0.6.*
     - pango
   run:
     - glib
     - libxml2
     - cairo
-    - gdk-pixbuf 2.36.*
+    - gdk-pixbuf
     - libcroco 0.6.*
     - pango
 
