--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -10,6 +10,8 @@ channel_targets:
 - conda-forge main
 docker_image:
 - condaforge/linux-anvil-comp7
+gdk_pixbuf:
+- 2.36.12
 glib:
 - '2.58'
 libxml2:
@@ -19,6 +21,8 @@ pango:
 pin_run_as_build:
   cairo:
     max_pin: x.x
+  gdk_pixbuf:
+    max_pin: x.x.x
   libxml2:
     max_pin: x.x
   pango:
