--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -10,6 +10,8 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+gdk_pixbuf:
+- 2.36.12
 glib:
 - '2.58'
 libxml2:
@@ -23,6 +25,8 @@ pango:
 pin_run_as_build:
   cairo:
     max_pin: x.x
+  gdk_pixbuf:
+    max_pin: x.x.x
   libxml2:
     max_pin: x.x
   pango:
