Add patch to enable link-time optimization for rust.
This seems to work around the missing cairo_ft_* symbols on Windows
since they weren't needed in the first place, and it should make the
binaries smaller overall.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.xz
   url: http://ftp.gnome.org/pub/gnome/sources/{{ name }}/{{ version_majmin }}/{{ name }}-{{ version }}.tar.xz
   sha256: {{ sha256 }}
+  patches:
+    - add_rust_lto.patch
 
 build:
   number: 0
