--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
   sha256: {{ sha256 }}
   patches:
     - add_rust_lto.patch
+    - windows_cairo_freetype_workaround.patch  # [win]
 
 build:
   number: 0
