--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,7 @@ requirements:
     - libxml2
     - cairo
     - gdk-pixbuf
-    - gobject-introspection  # [win]
+    - gobject-introspection
     - pango
   run:
     - glib
