--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,2 @@
-# update gdk_pixbuf pin for windows (version from conda-forge-pinning doesn't exist)
-gdk_pixbuf:  # [win]
-  - 2.38.2  # [win]
+gdk_pixbuf:
+  - 2
