--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -73,10 +73,10 @@ test:
     - if not exist %PREFIX%\\Library\\lib\\gdk-pixbuf-2.0\\2.10.0\\loaders\\libpixbufloader-svg.dll exit 1  # [win]
 
     # verify that headers get installed
-    - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/librsvg-features.h  # [unix]
+    - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/rsvg-features.h  # [unix]
     - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/rsvg-cairo.h  # [unix]
     - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/rsvg.h  # [unix]
-    - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\librsvg-features.h exit 1  # [win]
+    - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\rsvg-features.h exit 1  # [win]
     - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\rsvg-cairo.h exit 1  # [win]
     - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\rsvg.h exit 1  # [win]
 
