Add gi-docgen to build
This new tool is now required.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,8 @@ requirements:
   build:
     - cmake  # [win]
     - make  # [unix]
+    - docutils
+    - gi-docgen
     - gobject-introspection
     - pkg-config
     - {{ compiler('rust') }}
