--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,6 @@ source:
   sha256: {{ sha256 }}
   patches:
     - patches/0001_add_rust_lto.patch
-    - patches/0002_lower_pango_version.patch  # see https://gitlab.gnome.org/GNOME/librsvg/-/merge_requests/704
     - patches/0003_fix_win_when_doc_not_built # see https://gitlab.gnome.org/GNOME/librsvg/-/merge_requests/703
 
 build:
@@ -23,6 +22,15 @@ build:
     # Looks good but no new info after 2.43 so keeping it x.x for safety.
     # https://abi-laboratory.pro/?view=timeline&l=librsvg
     - {{ pin_subpackage('librsvg', max_pin='x') }}
+  missing_dso_whitelist:         # [linux and x86_64]
+    - '**/libc.so.6'             # [linux and x86_64]
+    - '**/libpthread.so.0'       # [linux and x86_64]
+    - '**/libdl.so.2'            # [linux and x86_64]
+    - '**/librt.so.1'            # [linux and x86_64]
+    - '**/libm.so.6'             # [linux and x86_64]
+    - '**/ld-linux-x86-64.so.2'  # [linux and x86_64]
+  ignore_run_exports:
+    - pixman
 
 requirements:
   build:
@@ -32,37 +40,48 @@ requirements:
     - pkg-config
     - {{ compiler('rust') }}
     - {{ compiler('c') }}
+    - autoconf    # [unix]
+    - automake    # [unix]
+    - libtool     # [unix]
     - patch       # [unix]
     - m2-patch    # [win]
     - gnuconfig   # [unix]
-    - glib        # [build_platform != target_platform]
-    - libxml2     # [build_platform != target_platform]
-    - cairo       # [build_platform != target_platform]
-    - gdk-pixbuf  # [build_platform != target_platform]
-    - pango       # [build_platform != target_platform]
-    - {{ cdt('libxau-devel') }}          # [linux and aarch64]
-    - {{ cdt('xorg-x11-util-macros') }}  # [linux and aarch64]
-    - {{ cdt('xorg-x11-proto-devel') }}  # [linux and aarch64]
-    - {{ cdt('libx11-devel') }}          # [linux and aarch64]
-    - {{ cdt('libx11-common') }}         # [linux and aarch64]
-    - {{ cdt('libx11') }}                # [linux and aarch64]
-    - {{ cdt('libxext-devel') }}         # [linux and aarch64]
-    - {{ cdt('libxext') }}               # [linux and aarch64]
+    - pthread-stubs                      # [linux]
+    - {{ cdt('libxau-devel') }}          # [linux]
+    - {{ cdt('libxau') }}                # [linux]
+    - {{ cdt('xorg-x11-util-macros') }}  # [linux]
+    - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
+    - {{ cdt('libx11-devel') }}          # [linux]
+    - {{ cdt('libx11-common') }}         # [linux]
+    - {{ cdt('libx11') }}                # [linux]
+    - {{ cdt('libxext-devel') }}         # [linux]
+    - {{ cdt('libxext') }}               # [linux]
+    - {{ cdt('libxrender-devel') }}      # [linux]
   host:
-    - glib
-    - gettext   # [unix and not (aarch64)]
-    - libiconv  # [win]
-    - libxml2
-    - cairo
-    - gdk-pixbuf
-    - pango
-  run:
-    - harfbuzz
-    - fontconfig
-    - freetype
+    - gobject-introspection
+    - glib >=2.50.0
+    - gettext   # [osx]
+    - harfbuzz >=2.0.0
+    - fontconfig  # [not win]
+    - libiconv  # [win and osx]
+    - libxml2 >=2.9.0
+    - cairo >=1.16.0
+    - gdk-pixbuf >=2.20
+    - pango >=1.48.11
     - libpng
-    - pango
+    - libzip
+    - freetype
+  run:
+    - harfbuzz >=2.0.0
+    - fontconfig  # [not win]
+    - libiconv  # [win or osx]
+    - libxml2 >=2.9.0
+    - cairo >=1.16.0
+    - gdk-pixbuf >=2.20
+    - pango >=1.48.11
+    - libpng
     - zlib
+    - freetype
 
 test:
   requires:
@@ -90,10 +109,10 @@ test:
     - if not exist %PREFIX%\\Library\\lib\\gdk-pixbuf-2.0\\2.10.0\\loaders\\libpixbufloader-svg.dll exit 1  # [win]
 
     # verify that headers get installed
-    - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/librsvg-features.h  # [unix]
+    - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/rsvg-features.h  # [unix]
     - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/rsvg-cairo.h  # [unix]
     - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/rsvg.h  # [unix]
-    - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\librsvg-features.h exit 1  # [win]
+    - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\rsvg-features.h exit 1  # [win]
     - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\rsvg-cairo.h exit 1  # [win]
     - if not exist %PREFIX%\\Library\\include\\{{ name_abi }}\\{{ name }}\\rsvg.h exit 1  # [win]
 
