--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
   sha256: {{ sha256 }}
   patches:
     - patches/0001_add_rust_lto.patch
-    - patches/0003_fix_win_when_doc_not_built # see https://gitlab.gnome.org/GNOME/librsvg/-/merge_requests/703
+    - patches/0003_fix_win_when_doc_not_built.patch # [win]; see https://gitlab.gnome.org/GNOME/librsvg/-/merge_requests/703
 
 build:
   number: 0
