--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,7 @@ source:
     - patches/0001_add_rust_lto.patch
 
 build:
+  skip: true # [win]
   number: 0
   run_exports:
     # Looks good but no new info after 2.43 so keeping it x.x for safety.
@@ -31,11 +32,6 @@ build:
     - '**/ld64.so.1'             # [linux and s390x]
   ignore_run_exports:
     - pixman
-    - zlib      # [win]
-    - libpng    # [win]
-    - libiconv  # [win]
-    - harfbuzz  # [win]
-    - freetype  # [win]
 
 requirements:
   build:
