--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ source:
 
 build:
   skip: true # [win and vc<14]
-  number: 1
+  number: 2
   run_exports:
     # Looks good but no new info after 2.43 so keeping it x.x for safety.
     # https://abi-laboratory.pro/?view=timeline&l=librsvg
@@ -35,8 +35,11 @@ requirements:
   build:
     - cmake  # [win]
     - make  # [unix]
-    - gobject-introspection # [not win]
     - pkg-config
+    - docutils
+    - gi-docgen
+    - binutils    # [linux]
+    - gobject-introspection  # [not win]
     - {{ compiler('rust') }}
     - {{ compiler('c') }}
     - autoconf    # [unix]
