Update c_stdlib_version (formerly MACOSX_DEPLOYMENT_TARGET) as needed by latest Rust

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,6 +32,7 @@ requirements:
     - pkg-config
     - {{ compiler('rust') }}
     - {{ compiler('c') }}
+    - {{ stdlib('c') }}
     - gnuconfig  # [unix]
     - glib        # [build_platform != target_platform]
     - libxml2     # [build_platform != target_platform]
