--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -2,6 +2,10 @@ c_compiler:
 - gcc
 c_compiler_version:
 - '12'
+c_stdlib:
+- sysroot
+c_stdlib_version:
+- '2.17'
 cairo:
 - '1'
 cdt_name:
@@ -24,3 +28,6 @@ rust_compiler:
 - rust
 target_platform:
 - linux-ppc64le
+zip_keys:
+- - c_stdlib_version
+  - cdt_name
