--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,5 @@
+c_compiler:        # [win]
+  - vs2022         # [win]
 c_stdlib_version:  # [osx and x86]
   - '10.12'        # [osx and x86]
 gdk_pixbuf:
