--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -16,10 +16,16 @@ channel_targets:
 - conda-forge main
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
+freetype:
+- '2'
 gdk_pixbuf:
 - '2'
 glib:
 - '2'
+harfbuzz:
+- '8'
+libpng:
+- '1.6'
 libxml2:
 - '2'
 pango:
