--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -20,10 +20,16 @@ channel_targets:
 - conda-forge main
 docker_image:
 - quay.io/condaforge/linux-anvil-aarch64
+freetype:
+- '2'
 gdk_pixbuf:
 - '2'
 glib:
 - '2'
+harfbuzz:
+- '8'
+libpng:
+- '1.6'
 libxml2:
 - '2'
 pango:
