--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,12 @@ build:
     # Looks good but no new info after 2.43 so keeping it x.x for safety.
     # https://abi-laboratory.pro/?view=timeline&l=librsvg
     - {{ pin_subpackage('librsvg', max_pin='x') }}
+  ignore_run_exports:
+    # these are the actual libraries associated with the metapackages
+    # that we needed to pull in for devel files below:
+    - libexpat
+    - liblzma
+    - libzlib
 
 requirements:
   build:
@@ -32,11 +38,16 @@ requirements:
     - {{ compiler('c') }}
     - {{ stdlib('c') }}
     - gnuconfig  # [unix]
-    - glib        # [build_platform != target_platform]
-    - libxml2     # [build_platform != target_platform]
-    - cairo       # [build_platform != target_platform]
-    - gdk-pixbuf  # [build_platform != target_platform]
-    - pango       # [build_platform != target_platform]
+    - glib            # [build_platform != target_platform]
+    - libxml2         # [build_platform != target_platform]
+    - cairo           # [build_platform != target_platform]
+    - gdk-pixbuf      # [build_platform != target_platform]
+    - pango           # [build_platform != target_platform]
+    # needed for devel files (e.g. pkg-config):
+    - expat           # [build_platform != target_platform]
+    - liblzma-devel   # [build_platform != target_platform]
+    - xorg-xorgproto  # [build_platform != target_platform]
+    - zlib            # [build_platform != target_platform]
   host:
     - glib
     - libxml2
@@ -46,6 +57,10 @@ requirements:
     - harfbuzz  # [linux]
     - libpng    # [linux]
     - freetype  # [linux]
+    - expat
+    - liblzma-devel
+    - xorg-xorgproto
+    - zlib
 
 test:
   requires:
