--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,23 +22,26 @@ build:
   ignore_run_exports_from:
     # Devel packages that we don't depend on directly:
     - expat
+    - freetype
+    - harfbuzz
     - liblzma-devel
+    - libpng
     - zlib
   ignore_run_exports:
     - libxml2  # ignoring "from" libxml2-devel doesn't work, weirdly? See #128
 
 requirements:
   build:
-    - cmake  # [win]
-    - make  # [unix]
+    - cargo-c
     - docutils
     - gi-docgen
     - gobject-introspection
+    - meson
+    - ninja
     - pkg-config
     - {{ compiler('rust') }} >=1.77
     - {{ compiler('c') }}
     - {{ stdlib('c') }}
-    - gnuconfig  # [unix]
     - glib            # [build_platform != target_platform]
     - libxml2-devel         # [build_platform != target_platform]
     - cairo           # [build_platform != target_platform]
@@ -84,9 +87,9 @@ test:
     - for /f "usebackq tokens=*" %%a in (`pkg-config --variable=libdir --dont-define-prefix {{ name_abi }}`) do if not exist "%%a/{{ lib }}.lib" exit 1  # [win]
 
     # verify that gdk-pixbuf loader library gets installed
-    - test -f $PREFIX/lib/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-svg.so  # [unix]
-    - test ! -f $PREFIX/lib/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-svg.a  # [unix]
-    - if not exist %PREFIX%\\Library\\lib\\gdk-pixbuf-2.0\\2.10.0\\loaders\\libpixbufloader-svg.dll exit 1  # [win]
+    - test -f $PREFIX/lib/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader_svg.so  # [unix]
+    - test ! -f $PREFIX/lib/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader_svg.a  # [unix]
+    - if not exist %PREFIX%\\Library\\lib\\gdk-pixbuf-2.0\\2.10.0\\loaders\\libpixbufloader_svg.dll exit 1  # [win]
 
     # verify that headers get installed
     - test -f $PREFIX/include/{{ name_abi }}/{{ name }}/rsvg-features.h  # [unix]
