--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -10,12 +10,16 @@ channel_targets:
 - conda-forge main
 expat:
 - '2'
+freetype:
+- '2'
 gdk_pixbuf:
 - '2'
 glib:
 - '2'
 liblzma_devel:
 - '5'
+libpng:
+- '1.6'
 librsvg:
 - '2'
 libxml2:
